--- a/index.html
+++ b/index.html
@@ -22,15 +22,15 @@
    <section id="top" class="pt-3 pb-3">
     <div class="container-xl">
 	  <div class="row top_1">
-	    <div class="col-md-4">
+	    <div class="col-md-6">
 		  <div class="top_1l">
 		    <ul class="mb-0 font_14">
 			  <li class="d-inline-block"><a class="text-white a_tag" href="#"><i class="fa fa-phone me-1 col_oran"></i> +123) 123 4567 890</a></li>
-			  <li class="d-inline-block ms-3"><a class="text-white a_tag" href="#"><i class="fa fa-envelope me-1 col_oran"></i> info@gmail.com</a></li>
+			  <li class="d-inline-block ms-3"><a class="text-white a_tag" href="mailto:info@jaichandimandir.org"><i class="fa fa-envelope me-1 col_oran"></i> info@jaichandimandir.org</a></li>
 			</ul>
 		  </div>
 		</div>
-		<div class="col-md-4">
+		<!--div class="col-md-4">
 		  <div class="top_1m text-center">
 		    <ul class="mb-0 font_14">
 			  <li class="d-inline-block"><a class="text-white a_tag" href="#"> EVENTS</a></li>
@@ -38,8 +38,8 @@
 			  <li class="d-inline-block ms-3"><a class="text-white a_tag" href="#"> MINISTRIES</a></li>
 			</ul>
 		  </div>
-		</div>
-		<div class="col-md-4">
+	  </div-->
+		<div class="col-md-6">
 		  <div class="top_1r text-end">
 		    <ul class="mb-0 fs-6">
 			  <li class="d-inline-block me-4 font_14"><a class="col_oran fw-bold" href="#"> <i class="fa fa-circle me-1 font_10 text-success"></i> ONLINE</a></li>
