--- a/index.html
+++ b/index.html
@@ -5,15 +5,31 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Krishna Temple</title>
-	<link href="css/bootstrap.min.css" rel="stylesheet" >
-	 <link href="fonts/css/fontawesome.min.css" rel="stylesheet" >
-	<link href="fonts/css/brands.min.css" rel="stylesheet" />
-    <link href="fonts/css/solid.min.css" rel="stylesheet" />
-	<link href="css/global.css" rel="stylesheet">
-	<link href="css/index.css" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
-   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
-	<script src="js/bootstrap.bundle.min.js"></script>
+	<link rel="apple-touch-icon" sizes="57x57" href="/favicon/apple-icon-57x57.png">
+        <link rel="apple-touch-icon" sizes="60x60" href="/favicon/apple-icon-60x60.png">
+        <link rel="apple-touch-icon" sizes="72x72" href="/favicon/apple-icon-72x72.png">
+        <link rel="apple-touch-icon" sizes="76x76" href="/favicon/apple-icon-76x76.png">
+        <link rel="apple-touch-icon" sizes="114x114" href="/favicon/apple-icon-114x114.png">
+        <link rel="apple-touch-icon" sizes="120x120" href="/favicon/apple-icon-120x120.png">
+      	<link rel="apple-touch-icon" sizes="144x144" href="/favicon/apple-icon-144x144.png">
+	<link rel="apple-touch-icon" sizes="152x152" href="/favicon/apple-icon-152x152.png">
+	<link rel="apple-touch-icon" sizes="180x180" href="/favicon/apple-icon-180x180.png">
+	<link rel="icon" type="image/png" sizes="192x192"  href="/favicon/android-icon-192x192.png">
+	<link rel="icon" type="image/png" sizes="32x32" href="/favicon/favicon-32x32.png">
+	<link rel="icon" type="image/png" sizes="96x96" href="/favicon/favicon-96x96.png">
+	<link rel="icon" type="image/png" sizes="16x16" href="/favicon/favicon-16x16.png">
+	<meta name="msapplication-TileColor" content="#ffffff">
+	<meta name="msapplication-TileImage" content="/favicon/ms-icon-144x144.png">
+	<meta name="theme-color" content="#ffffff">
+	<link href="/css/bootstrap.min.css" rel="stylesheet" >
+	<link href="/fonts/css/fontawesome.min.css" rel="stylesheet" >
+	<link href="/fonts/css/brands.min.css" rel="stylesheet" />
+        <link href="/fonts/css/solid.min.css" rel="stylesheet" />
+	<link href="/css/global.css" rel="stylesheet">
+	<link href="/css/index.css" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+	<script src="/js/bootstrap.bundle.min.js"></script>
 
 </head>
 <body>
@@ -25,7 +41,7 @@
 	    <div class="col-md-6">
 		  <div class="top_1l">
 		    <ul class="mb-0 font_14">
-			  <li class="d-inline-block"><a class="text-white a_tag" href="#"><i class="fa fa-phone me-1 col_oran"></i> +123) 123 4567 890</a></li>
+			  <li class="d-inline-block"><a class="text-white a_tag" href="tel:+918100121616"><i class="fa fa-phone me-1 col_oran"></i> +91) 810 0121 616</a></li>
 			  <li class="d-inline-block ms-3"><a class="text-white a_tag" href="mailto:info@jaichandimandir.org"><i class="fa fa-envelope me-1 col_oran"></i> info@jaichandimandir.org</a></li>
 			</ul>
 		  </div>
@@ -56,8 +72,8 @@
    <section id="header">
 <nav class="navbar navbar-expand-md navbar-light  p-0 bg-white" id="navbar_sticky">
   <div class="container-xl">
-    <a class="p-0 navbar-brand fw-bold me-0  text-black" href="index.html"><i class="fa-solid fa-om me-1 col_oran"></i> Krishna <br>
-<span class="fw-normal font_14 text-muted">Mega Temple</span>
+    <a class="p-0 navbar-brand fw-bold me-0  text-black" href="/"><i class="fa-solid fa-om me-1 col_oran"></i> JaiChandiMandir.ORG <br>
+<span class="fw-normal font_14 text-muted">জয় চন্ডী মন্দির</span>
 </a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -1545,7 +1561,7 @@ October 9, 2021</h6>
    <div class="footer_b1 row">
      <div class="col-md-5">
 	   <div class="footer_b1l">
-	     <p class="mb-0 text-light">© 2013 Your Website Name. All Rights Reserved | Design by <a class="col_oran fw-bold" href="http://www.templateonweb.com">TemplateOnWeb</a></p>
+	     <p class="mb-0 text-light">© 2025 <a class="col_oran fw-bold" href="/">www.JaiChandiMandir.ORG</a> All Rights Reserved | Design by <a class="col_oran fw-bold" href="//shyamstudio.org">SHYAM Studio (India) Pvt. Ltd.</a></p>
 	   </div>
 	 </div>
 	 <div class="col-md-3">
