--- a/index.html
+++ b/index.html
@@ -72,8 +72,8 @@
    <section id="header">
 <nav class="navbar navbar-expand-md navbar-light  p-0 bg-white" id="navbar_sticky">
   <div class="container-xl">
-    <a class="p-0 navbar-brand fw-bold me-0  text-black" href="/"><i class="fa-solid fa-om me-1 col_oran"></i> JaiChandiMandir.ORG <br>
-<span class="fw-normal font_14 text-muted">জয় চন্ডী মন্দির</span>
+    <a class="p-0 navbar-brand fw-bold me-0  text-black" href="/"><i class="fa-solid fa-om me-1 col_oran"></i> জয় চন্ডী মন্দির <br>
+<span class="fw-normal font_14 text-muted">JaiChandiMandir.ORG</span>
 </a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -1561,7 +1561,7 @@ October 9, 2021</h6>
    <div class="footer_b1 row">
      <div class="col-md-5">
 	   <div class="footer_b1l">
-	     <p class="mb-0 text-light">© 2025 <a class="col_oran fw-bold" href="/">www.JaiChandiMandir.ORG</a> All Rights Reserved | Design by <a class="col_oran fw-bold" href="//shyamstudio.org">SHYAM Studio (India) Pvt. Ltd.</a></p>
+	     <p class="mb-0 text-light">Design with Love by <a class="col_oran fw-bold" href="//shyamstudio.org">SHYAM Studio (India) Pvt. Ltd.</a><br/>© 2025 <a class="col_oran fw-bold" href="/">www.JaiChandiMandir.ORG</a> All Rights Reserved</p>
 	   </div>
 	 </div>
 	 <div class="col-md-3">
