--- a/contact.html
+++ b/contact.html
@@ -294,13 +294,13 @@
 	   <div class="col-md-6">
 	    <div class="contact_1ril">
 		 <h6>Name (required)</h6>
-		 <input class="form-control" placeholder="Your Name*" type="text">
+		 <input class="form-control disabled" placeholder="Your Name*" type="text">
 		</div>
 	   </div>
 	   <div class="col-md-6">
 	    <div class="contact_1ril">
 		 <h6>Email adress (required)</h6>
-		 <input class="form-control" placeholder="Mail*" type="text">
+		 <input class="form-control disabled" placeholder="Mail*" type="text">
 		</div>
 	   </div>
 	  </div>
@@ -308,7 +308,7 @@
 	   <div class="col-md-6">
 	    <div class="contact_1ril">
 		 <h6>Phone (optional)</h6>
-		 <input class="form-control" placeholder="Your Phone" type="text">
+		 <input class="form-control disabled" placeholder="Your Phone" type="text">
 		</div>
 	   </div>
 	   <div class="col-md-6">
@@ -327,9 +327,9 @@
 	   <div class="col-md-12">
 	    <div class="contact_1ril">
 		 <h6>Your message</h6>
-		 <textarea class="form-control area" placeholder="Type Message*"></textarea>
+		 <textarea class="form-control area disabled" placeholder="Type Message*"></textarea>
 		 <h6 class="mb-0 mt-4">
-          <a class="button" href="#">Send Message </a>
+          <a class="button disabled" href="#">Send Message </a>
         </h6>
 		</div>
 	   </div>
@@ -340,7 +340,7 @@
   </div>
    <div class="row contact_2 mt-4">
     <div class="col-md-12">
-	  <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d114964.53925916665!2d-80.29949920266738!3d25.782390733064336!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x88d9b0a20ec8c111%3A0xff96f271ddad4f65!2sMiami%2C+FL%2C+USA!5e0!3m2!1sen!2sin!4v1530774403788" height="450" style="border:0; width:100%;" allowfullscreen=""></iframe>
+	  <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3987.2233148846217!2d87.959213175495!3d21.866558758476764!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3a02e2686bdab5a3%3A0x2f25713d07c63f3!2sJai%20Chandi%20Mandir!5e1!3m2!1sen!2sin!4v1744883247980!5m2!1sen!2sin" height="450" style="border:0; width:100%;" allowfullscreen=""></iframe>
 	</div>
    </div>
 </div></section>
